refactoring: centralized embeddings and augmentators